--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "java.import.gradle.wrapper.enabled": true,
+    "java.import.gradle.version": "wrapper",
+    "java.import.gradle.java.home": "/usr/lib/jvm/java-21-openjdk-amd64",
+    "java.jdt.ls.java.home": "/usr/lib/jvm/java-21-openjdk-amd64",
+    "files.watcherExclude": {
+        "**/.gradle/**": true
+    }
 }
