Login Page Made

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/coinlingo
+spring.datasource.url=jdbc:postgresql://cointrade-postgres:5432/coinlingo
 spring.datasource.username=coinuser
 spring.datasource.password=coinpass
 spring.datasource.driver-class-name=org.postgresql.Driver
